security: harden JWT, Spring Security and frontend auth flow
Backend:

- JwtService: remove hardcoded SECRET; inject via @Value(jwt.secret) from env var JWT_SECRET. Add iss (issuer) and jti (UUID) claims; validate issuer on every parse call.

- JwtFilter: log rejected tokens with WARN instead of silently swallowing exceptions.

- SecurityConfig: restrict /h2-console and Swagger UI to dev profile only.

- CorsConfig: externalize allowed-origins via env var CORS_ALLOWED_ORIGINS.

- AuthService: replace explicit email-exists message to prevent user enumeration.

- GlobalExceptionHandler: stop leaking internal ex.getMessage() in 500 responses.

- application.yaml: add jwt.secret, jwt.expiration-ms and app.cors.allowed-origins with env-var overrides; disable Swagger by default.

- application-dev.yaml: enable Swagger only in dev profile.

Frontend:

- PrivateRoute.tsx: new guard component; redirects unauthenticated users to /login-usuario.

- App.tsx: wrap all /dashboard/** routes inside PrivateRoute.

- Client.ts: fix 401 redirect from /login to /login-usuario; merge two response interceptors into one; properly read plain-string backend error bodies.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>